--- a/static/images/databasesystems/syllabus/syllabus_cs312.tex
+++ b/static/images/databasesystems/syllabus/syllabus_cs312.tex
@@ -77,6 +77,7 @@
 \subsection*{\textbf{Course Instructor}}
 Dr. Oliver BONHAM-CARTER (said and written as ``Bonham-Carter,'' not “Carter'')\\
 \noindent Email: \url{obonhamcarter@allegheny.edu} \\
+%\noindent Office Phone: +1 814-332-2880 \\
 \noindent Web Site: \url{http://www.cs.allegheny.edu/sites/obonhamcarter/} \\
 \noindent Class and lab meeting place: Alden 101\\
 \noindent Final Exam Code: D\\  
@@ -305,6 +306,11 @@ These grading categories have the definitions which are defined below.
 
 \end{itemize}
 
+
+
+
+
+
 \subsubsection*{Assignment Submission}
 
 We will be using GitHub Classroom to collect all assignments. It is expected that you are able to effectively use {\tt git} to submit your work. If you require help, please see your peers, the Technology Leaders, or your instructor.\\
@@ -327,7 +333,7 @@ Classes will be attended by in-person and online students. Each class will be re
 If you will not be able to attend your session, then please email the course instructor at least one week in advance to describe your situation.  Students who miss more than five unexcused classes, laboratory sessions, or group project meetings will have their final grade in the course reduced by one letter grade. Students who miss more than ten of the aforementioned events will automatically fail the course.
 
 
-\textbf{Labs}: The laboratory sessions will be held online and therefore, it is the student's responsibility to check up on materials for lab and to ask questions when necessary to ensure comprehension of deliverables. 
+\textbf{Labs}: The laboratory sessions are in-person. It is the student's responsibility be present for each meeting to ensure a comprehension of materials. 
 
 \subsubsection*{\textbf{Bring your own computer to class}}
 
@@ -337,7 +343,7 @@ During the semester, you will be told which software to install on your machine 
 
 \begin{itemize}
 \item Git and GiHub (a software development software system): \url{https://github.com/}
-\item Atom (an editor): \url{https://atom.io/}
+\item VsCode (an editor): \url{https://code.visualstudio.com/download}
 \item Docker (a software container system): \url{https://www.docker.com/}
 	\begin{itemize}
 		\item Installing Docker: \url{https://docs.docker.com/get-docker/}
@@ -407,18 +413,6 @@ The Academic Honor Program that governs the entire academic program at Allegheny
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 \end{document}
 
 
@@ -428,197 +422,3 @@ The Academic Honor Program that governs the entire academic program at Allegheny
 % junk bin %
 % junk bin %
 % junk bin %
-
-
-
-
-
-\vspace{-.1in}
-\subsection*{\textbf{Assignment Completion}}
-
-All assignments will have a stated due date. To accommodate for unforeseen life events, each student will be given an option of dropping one assignment grade at the end of the semester. The dropped grade cannot include the final proposal assignment. Otherwise, unless severe extenuating circumstances have been presented to the instructor, no assignments will be accepted after the deadline.
-
-%All assignments will have a stated due date.  Late assignments will be accepted for up to one week past the assigned due date with a 15\% penalty. All late work must be submitted at the beginning of the session that is scheduled one week after the due date. Unless special arrangements are made with the course instructor, no assignments will be accepted after the late deadline.
-
-
-%%%%
-\omitit{
-\vspace{-.10in}
-\subsection*{\textbf{Laboratory Attendance}}
-
-In order to acquire the proper skills in technical writing, critical reading, and the presentation and evaluation of technical material, it is essential for students to have hands-on experience in a laboratory. Therefore, it is mandatory for all students to attend the laboratory sessions. If you will not be able to attend a laboratory, then please see the one of the course instructor at least one week in advance in order to explain your situation. Students who miss more than two unexcused laboratories will have their final grade in the course reduced by one letter grade.  Students who miss more than four unexcused laboratories will automatically fail the course.
-}%%%%
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\subsubsection*{\textbf{Class Preparation}}
-
-% The study of the computer science discipline is very challenging.  Students in this class will be challenged to learn
-% the principles and practice of software development.  During the coming semester even the most diligent student will
-% experience times of frustration when they are attempting to understand a challenging concept or complete a difficult
-% laboratory assignment.  In many situations some of the material that we examine will initially be confusing : do not
-% despair!  Press on and persevere!
-% 
-
-\noindent In order to minimize confusion and maximize learning, students must invest time to prepare for class discussions and lectures.  During the class periods, the course instructor will often pose demanding questions that could require group discussion, the creation of a program, a vote on a thought-provoking issue, or a group presentation.  Only students who have prepared for class by reading the assigned material and reviewing the current assignments will be able to effectively participate in these discussions.  More importantly, only prepared students will be able to acquire the knowledge and skills that are needed to be successful in both this course and the field of data analytics.  In order to help students remain organized and effectively prepare for classes, the course instructor will maintain a class schedule. During the class sessions students will also be required to download, write, use, and modify programs, and data sets that are made available through the course GitHub repository.
-
-
-\subsubsection*{\textbf{Email}}
-
-Using your Allegheny College email address, I will sometimes send out class announcements about matters such as assignment clarifications or changes in the schedule. It is your responsibility to check your email at least once a day and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in {\em The Compass}, the college's student handbook.
-
-\vspace*{-.1in}
-\begin{quote}
-  ``The use of email is a primary method of communication on campus. \ldots  All students are provided with a campus email account and address while enrolled at Allegheny and are expected to check the account on a regular
-  basis.'' 
-\end{quote}
-\vspace*{-.1in}
-
-\subsubsection*{\textbf{Disability Services}}
-
-The Americans with Disabilities Act (ADA) is a federal anti-discrimination statute that provides comprehensive civil rights protection for persons with disabilities. Among other things, this legislation requires all students with disabilities be guaranteed a learning environment that provides for reasonable accommodation of their disabilities. Students with disabilities who believe they may need accommodations in this class are encouraged to contact Disability Services at (814) 332-2898.  Disability Services is part of the Learning Commons and is located in Pelletier Library. Please do this as soon as possible to ensure that approved accommodations are implemented in a timely fashion.
-
-\subsubsection*{\textbf{Honor Code}}
-
-The Academic Honor Program that governs the entire academic program at Allegheny College is described in the Allegheny Course Catalog and in \emph{The Compass: Student Handbook}.  The Honor Program applies to all work that is submitted for academic credit or to meet non-credit requirements for graduation at Allegheny College.  This includes all work assigned for this class (e.g., examinations, laboratory assignments, and the final project).  All students who have enrolled in the College will work under the Honor Program. Each student who has matriculated at the College has acknowledged the following pledge:
-
-\vspace*{-.1in}
-\begin{quote}
-\emph{I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the integrity of both myself and the College community as a whole.}
-\end{quote}
-\vspace*{-.1in}
-
-\noindent Additionally, we expect that you will adhere to the following Department Policy:
-
-\begin{center} \textbf{ Department of Computer Science Honor Code Policy } \end{center}
-\vspace*{-.1in}
-It is recognized that an important part of the learning process in any course, and particularly in computer science, derives from thoughtful discussions with teachers, student assistants, and fellow students. Such dialogue is encouraged. However, it is necessary to distinguish carefully between the student who discusses the principles underlying a problem with others, and the student who produces assignments that are identical to, or merely variations on, someone else's work. It will therefore be understood that all assignments submitted to faculty of the Department of Computer Science are to be the original work of the student submitting the assignment, and should be signed in accordance with the provisions of the Honor Code. Appropriate action will be taken when assignments give evidence that they were derived from the work of others.
-
-%%%%
-omitit{
-\section*{Attendance}
-% ref: https://docs.google.com/document/d/1necRH1Y9JIELUUNTYyDbvkbpH9h-n1bhhFV14A9og5w/edit
-
-
-\begin{itemize}
-
-\item \textbf{Remote Attendance}
-If you are participating entirely remotely this semester and relying on technology to attend class meetings, occasional technology problems that disrupt your participation will not harm your participation grade, but as with illnesses and family emergencies, chronic absences for this reason will require a more extensive discussion with me and may impact your grade.
-
-
-\item \textbf{Video and Microphones}
-%In addition, faculty may want to consider a statement on \emph{netiquette} (use of microphone, video, protocols for how to participate in video conference meetings).
-Please turn off your microphone when not speaking during any meeting where you are using your computer. The microphone may allow for background sound to contribute to noise during the meeting. It is strongly encouraged that you use your video to show yourself during meeting. Enabling your video will allow the instructor to see hands to indicate questions. Showing video also helps to stimulate group discussions.
-\end{itemize}
-
-}% end of omitit{}
-
-
-
-\subsection*{College Messages}
-\begin{itemize}
-
-\item \textbf{Statement of Community}
-Allegheny students and employees are committed to creating an inclusive, respectful and safe residential learning community that will actively confront and challenge racism, sexism, heterosexism, religious bigotry, and other forms of harassment and discrimination. We encourage individual growth by promoting a free exchange of ideas in a setting that values diversity, trust and equality. So that the right of all to participate in a shared learning experience is upheld, Allegheny affirms its commitment to the principles of freedom of speech and inquiry, while at the same time fostering responsibility and accountability in the exercise of these freedoms.
-
-
-%\item \textbf{Academic Integrity}
-%Allegheny College operates under an Honor Code, to which all students are subject. See The Compass: Student Handbook. You should educate yourself appropriately as to how this applies to you. Plagiarism and other forms of intellectual dishonesty will not be tolerated.
-
-
-%\item \textbf{Disability Services}
-%Students with disabilities who believe they may need accommodations in this class are encouraged to contact the Office of Disability Services at (814) 332-2898.  Disability Services is located in Pelletier Library.  Please do this as soon as possible to ensure that such accommodations are implemented in a timely fashion.
-
-
-\item \textbf{Learning Commons}
-If you are not already, you should become familiar with the Learning Commons, located in Pelletier Library (\url{http://sites.allegheny.edu/learningcommons/}). Among other things, the staff at the Learning Commons can assist you with study and time management skills, writing, and critical reading. You should know that if you are having trouble in this class, or if I think you can specifically benefit from their services, I will refer you to the Learning Commons. Experienced peer writing and speech consultants in the Learning Commons help writers and speakers to determine strategies for effective communication and to make academically responsible choices at any stage in the writing or speaking process and on assignments in any discipline. Both appointments and drop-in sessions are available. To view the hours of operation, and to make an appointment, visit the Learning Commons website.
-
-\item \textbf{Religious Accommodations}
-If you need to miss class or reschedule a final examination due to a religious observance, please speak to the professor well in advance to make arrangements. See \url{http://sites.allegheny.edu/religiouslife/religious-holy-days/}.
-\end{itemize}
-
-\end{document}
-
-
-% junk bin %
-% junk bin %
-% junk bin %
-% junk bin %
-% junk bin %
-% junk bin %
-
-
-
-
-
-
-
-\subsection*{\textbf{Course Instructor}}
-Dr. Oliver BONHAM-CARTER (said and written as ``Bonham-Carter,'' not “Carter'')\\
-\noindent Classroom: Alden Hall 101 \\
-\noindent Office Location: Alden Hall 104 \\
-\noindent Office Phone: +1 814-332-2880 \\
-\noindent Email: \url{obonhamcarter@allegheny.edu} \\
-\noindent Web Site: \url{http://www.cs.allegheny.edu/sites/obonhamcarter/} \\
-\noindent Slack Channel: cs312f2020\\
-\noindent Slack link: \url{cs312f2020.slack.com}\\
-\noindent Exam Code: J\\
-\noindent Final deliverable due: 11$^{th}$ December 2020, 9:00am\\
-\noindent Distribution Requirements: QR, SP\\
-\noindent Syllabus updated on: \today\\
-
-
-% {\color{red}Syllabus updated on: 23 August 2020}\\
-% https://sites.allegheny.edu/registrar/fall-2020-final-exam-schedule/
-
-%{\color{red} NOTE: This syllabus contains updates to respond to the college's closing due to the COVID-19 spread. These changes are in red. As always, please mail the instructor with any questions or concerns. }
-
-
-\subsection*{Instructor's Office Hours}
-There will be no in-person meeting times. Instead, online meetings using Zoom (download link: \url{https://zoom.us/}. To schedule a meeting with me during my office hours, please visit my web site and click the ``Schedule'' link in the top right-hand corner. Here, you can browse my office hours slots to schedule an appointment. You will find a Zoom link with the meeting slot link. At the allotted time, I will be online and awaiting your meeting. If given office hour meeting times are not convenient for your schedule, please let me know and I would be happy to work with you to find and other time which would be suitable for your schedule.
-
-
-\begin{itemize}
-  \itemsep 0em
-  \item Tuesdays \emph{and} Thursdays: 2:00 pm -- 4:00 pm (10 minute time slots)
-  \item Wednesday \emph{and} Friday: 1:30 pm -- 2:30 pm (10 minute time slots)
-  \item By appointment, if these times do not work for you.
-\end{itemize}
-
-\noindent
-
-\subsubsection*{Online Meetings}
-\label{sec:meet}
-
-We will be using Zoom to record our in-class meetings and labs for online students to participate in the course. The Zoom link for classes and the lab can be found on your shared course calendar for the event -- the calendar link will be given by a separate communication.
-
-
-% Topic: CMPSC 312
-% Time: This is a recurring meeting Meet anytime
-
-% Join Zoom Meeting
-% https://allegheny.zoom.us/j/99954333985
-
-% Meeting ID: 999 5433 3985
-
-\subsection*{Technical Leaders}
-	\begin{itemize}
-		\item   \url{https://www.cs.allegheny.edu/teaching/technicalleaders/}
-	\end{itemize}
-
-
