--- a/static/images/profdev/cv/cv.tex
+++ b/static/images/profdev/cv/cv.tex
@@ -73,9 +73,12 @@
 %\quote{\textbf{Research Interests:} To implement better teaching and research by increasing more involvement of students in coursework, research projects and other advanced projects in Bioinformatics, Computer Science and Integrative Informatics}
 
 
-\quote{\textbf{Research Interests:} To apply my education, research and other outlets of academic creativity to contribute to the development of better statistical methods to process, study and comprehend large-scale digital data.
+\quote{\textbf{Research Interests:} To apply my academic efforts to produce better mechanisms of data analysis in bioinformatics. To inspire my students to follow their dreams to successful careers in data analysis.}
+
 % To contribute ideas, research and software to help my scientific community in bioinformatics and data analysis to process and learn from the massive amounts of raw data which comes from other avenues of research. 
-To develop better techniques of teaching and encouraging my students to follow in this exciting direction of research which will serve them in their careers as they build the world of tomorrow from today's data. }
+
+
+
 
 %\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
 
