Adding content, changing CV

--- a/static/images/profdev/cv/cv.tex
+++ b/static/images/profdev/cv/cv.tex
@@ -201,11 +201,11 @@
 
 %\cventry{}{Class Types}{Brief description}{}{}{}{}
 \cventry{}{Academic Discource I}{A class for success for incoming and first-year students}{}{}{}{} 
-\cventry{}{Data Analytics for \url{https://scholarly.co/}}{An online class about for the isolation and analysis of statistically-discovered trends and patterns from data sets. Includes material of ethics and responsibility in data science research.}{}{}{}{} 
+\cventry{}{Data Analytics for \url{https://scholarly.co/}}{An online class about for the isolation and analysis of statistically-discovered trends and patterns from data sets. Includes material of ethics and responsibility in data science research}{}{}{}{} 
 
 \cventry{}{Operating Systems}{Programming skill, concepts and creation of algorithmic modules in the scope of computer operating systems. Topics include: CPU, memory access, memory pages, kernels, software launching and running and similar concepts}{}{}{}{}
 \cventry{}{Senior Thesis}{First and /or second reader for senior comprehensive projects}{}{}{}{}
-\cventry{}{Data Analytics}{Programming and analysis for the extraction of meaningful information from raw data using statistical models, programming and data science. Includes material of ethics and responsibility in data science research.}{}{}{}{}
+\cventry{}{Data Analytics}{Programming and analysis for the extraction of meaningful information from raw data using statistical models, programming and data science. Includes material of ethics and responsibility in data science research}{}{}{}{}
 \cventry{}{Bioinformatics}{DNA, Protein sequence analysis, gene expression, proteomics, post-tranalational modifications and in relation to domains, etc}{}{}{}{}
 \cventry{}{Discrete Structures}{Mathematics and programming, estimation, graph theory, probability statistics, numerical analysis, etc}{}{}{}{}
 \cventry{}{Databases}{SQL schema design, programming syntax to store and extract data}{}{}{}{}
@@ -263,6 +263,7 @@
 
 \section{Talks}
 \vspace{-.5cm}
+\cvline{Decemebr 2021}{\textbf{Faculty Lecture Series at Allegheny College}: \emph{Integrating Responsibility Into Computing}}{Info Link: \url{https://www.youtube.com/watch?v=A8QsWP9NGUs}}{}
 
 \cvline{March 2021}{\textbf{MozFest: Mozilla Festival}: \emph{Responsible Computing Curricula -- How do we do it? }}{Info Link: \url{https://schedule.mozillafestival.org/session/877N8H-1}}{}
 
@@ -273,6 +274,12 @@
 
 \section{Awards and Grants}
 \vspace{-.5cm}
+
+\cvline{June 2022}{\textbf{GRANT: Demmler}: DATA SCIENCE Curriculum grant},{Allegheny College},{Award amount: $\$1250$}{}
+\cvline{June 2022}{\textbf{GRANT: Demmler}: MICRO-CREDENTIAL development grant},{Allegheny College},{Award amount: $\$1250$}{}
+\cvline{Feb 2021}{\textbf{GRANT: Demmler}: INTEGRATIVE INFORMATICS Curriculum grant},{Allegheny College},{Award amount: $\$625$}{}
+\cvline{Feb 2021}{\textbf{GRANT: Demmler}: ECON Curriculum grant},{Allegheny College},{Award amount: $\$1250$}{}
+
 
 \cvline{March 2021}{\textbf{GRANT}: Principle Investigator for grant entitled, \emph{Responsible Computer Science Challenge: Stage II} of the Mozilla Foundation. }{Award amount: $\$64,000$}{}
 \cvline{March 2019}{\textbf{GRANT}: Principle Investigator for grant entitled, \emph{Responsible Computer Science Challenge: Stage I} of the Mozilla Foundation.}{Award amount: $\$144,000$}{}
@@ -377,7 +384,7 @@
 \cvline{Biking}{\small Long biking trips are exciting.}
 \cvline{Tennis}{\small My game still needs some work...}
 \cvline{Physical Sciences}{\small Most of my favorite classes, books and trips to museums have been to learn about science.}
-\cvline{Using plastics}{\small Negative: No plastics, please.}
+\cvline{Using plastics}{\small Just kidding: No plastics, please.}
 
 
 \closesection{}                   % needed to renewcommands
