--- a/static/images/discretestructures/syllabus/syllabus_cs102.tex
+++ b/static/images/discretestructures/syllabus/syllabus_cs102.tex
@@ -73,7 +73,8 @@ Dr. Oliver BONHAM-CARTER (said and written as ``Bonham-Carter,'' not “Carter''
 \noindent Office Location: Alden Hall 104 \\
 %\noindent Office Phone: +1 814-332-2880 \\
 \noindent Email: \url{obonhamcarter@allegheny.edu} \\
-\noindent Web Site: \url{http://www.cs.allegheny.edu/sites/obonhamcarter/} \\
+\noindent First Website: \url{http://www.cs.allegheny.edu/sites/obonhamcarter/} \\
+\noindent Second Website: \url{https://proactiveprogrammers.com/}\\
 \noindent Exam Code: F\\
 \noindent Final deliverable 16$^{th}$ Dec 2019, 7:00 pm
 % https://sites.allegheny.edu/registrar/fall-2022-final-exam-schedule/
