--- a/public/images/profdev/cv/cv.tex
+++ b/public/images/profdev/cv/cv.tex
@@ -73,9 +73,12 @@
 %\quote{\textbf{Research Interests:} To implement better teaching and research by increasing more involvement of students in coursework, research projects and other advanced projects in Bioinformatics, Computer Science and Integrative Informatics}
 
 
-\quote{\textbf{Research Interests:} To apply my education, research and other outlets of academic creativity to contribute to the development of better statistical methods to process, study and comprehend large-scale digital data.
+\quote{\textbf{Research Interests:} To apply my academic efforts to produce better mechanisms of data analysis in bioinformatics. To inspire my students to follow their dreams to successful careers in data analysis.}
+
 % To contribute ideas, research and software to help my scientific community in bioinformatics and data analysis to process and learn from the massive amounts of raw data which comes from other avenues of research. 
-To develop better techniques of teaching and encouraging my students to follow in this exciting direction of research which will serve them in their careers as they build the world of tomorrow from today's data. }
+
+
+
 
 %\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -198,11 +201,11 @@ To develop better techniques of teaching and encouraging my students to follow i
 
 %\cventry{}{Class Types}{Brief description}{}{}{}{}
 \cventry{}{Academic Discource I}{A class for success for incoming and first-year students}{}{}{}{} 
-\cventry{}{Data Analytics for \url{https://scholarly.co/}}{An online class about for the isolation and analysis of statistically-discovered trends and patterns from data sets. Includes material of ethics and responsibility in data science research.}{}{}{}{} 
+\cventry{}{Data Analytics for \url{https://scholarly.co/}}{An online class about for the isolation and analysis of statistically-discovered trends and patterns from data sets. Includes material of ethics and responsibility in data science research}{}{}{}{} 
 
 \cventry{}{Operating Systems}{Programming skill, concepts and creation of algorithmic modules in the scope of computer operating systems. Topics include: CPU, memory access, memory pages, kernels, software launching and running and similar concepts}{}{}{}{}
 \cventry{}{Senior Thesis}{First and /or second reader for senior comprehensive projects}{}{}{}{}
-\cventry{}{Data Analytics}{Programming and analysis for the extraction of meaningful information from raw data using statistical models, programming and data science. Includes material of ethics and responsibility in data science research.}{}{}{}{}
+\cventry{}{Data Analytics}{Programming and analysis for the extraction of meaningful information from raw data using statistical models, programming and data science. Includes material of ethics and responsibility in data science research}{}{}{}{}
 \cventry{}{Bioinformatics}{DNA, Protein sequence analysis, gene expression, proteomics, post-tranalational modifications and in relation to domains, etc}{}{}{}{}
 \cventry{}{Discrete Structures}{Mathematics and programming, estimation, graph theory, probability statistics, numerical analysis, etc}{}{}{}{}
 \cventry{}{Databases}{SQL schema design, programming syntax to store and extract data}{}{}{}{}
@@ -260,6 +263,7 @@ To develop better techniques of teaching and encouraging my students to follow i
 
 \section{Talks}
 \vspace{-.5cm}
+\cvline{Decemebr 2021}{\textbf{Faculty Lecture Series at Allegheny College}: \emph{Integrating Responsibility Into Computing}}{Info Link: \url{https://www.youtube.com/watch?v=A8QsWP9NGUs}}{}
 
 \cvline{March 2021}{\textbf{MozFest: Mozilla Festival}: \emph{Responsible Computing Curricula -- How do we do it? }}{Info Link: \url{https://schedule.mozillafestival.org/session/877N8H-1}}{}
 
@@ -270,6 +274,12 @@ To develop better techniques of teaching and encouraging my students to follow i
 
 \section{Awards and Grants}
 \vspace{-.5cm}
+
+\cvline{June 2022}{\textbf{GRANT: Demmler}: DATA SCIENCE Curriculum grant},{Allegheny College},{Award amount: $\$1250$}{}
+\cvline{June 2022}{\textbf{GRANT: Demmler}: MICRO-CREDENTIAL development grant},{Allegheny College},{Award amount: $\$1250$}{}
+\cvline{Feb 2021}{\textbf{GRANT: Demmler}: INTEGRATIVE INFORMATICS Curriculum grant},{Allegheny College},{Award amount: $\$625$}{}
+\cvline{Feb 2021}{\textbf{GRANT: Demmler}: ECON Curriculum grant},{Allegheny College},{Award amount: $\$1250$}{}
+
 
 \cvline{March 2021}{\textbf{GRANT}: Principle Investigator for grant entitled, \emph{Responsible Computer Science Challenge: Stage II} of the Mozilla Foundation. }{Award amount: $\$64,000$}{}
 \cvline{March 2019}{\textbf{GRANT}: Principle Investigator for grant entitled, \emph{Responsible Computer Science Challenge: Stage I} of the Mozilla Foundation.}{Award amount: $\$144,000$}{}
@@ -374,7 +384,7 @@ To develop better techniques of teaching and encouraging my students to follow i
 \cvline{Biking}{\small Long biking trips are exciting.}
 \cvline{Tennis}{\small My game still needs some work...}
 \cvline{Physical Sciences}{\small Most of my favorite classes, books and trips to museums have been to learn about science.}
-\cvline{Using plastics}{\small Negative: No plastics, please.}
+\cvline{Using plastics}{\small Just kidding: No plastics, please.}
 
 
 \closesection{}                   % needed to renewcommands
