--- a/static/images/profdev/cv/cv.tex
+++ b/static/images/profdev/cv/cv.tex
@@ -62,23 +62,17 @@
 \extrainfo{\url{http://oliverbonhamcarter.com/},\\Orcid: 0000-0001-9032-0398}
 
 
-%\photo[64pt]{picture}                         % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
+%\photo[64pt]{obc.png}                         % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
 
 
 %%\quote{To obtain a research or education-based post that will allow me to demonstrate my skills while contributing to an organization in a positive manner.}                 % optional, remove the line if not wanted
 %\quote{\textbf{Research Interests:} Protein degradation in microgravity environments; Analysis of distributions of motifs which likely attract oxidation in mitochondrial protein.}
-
 %\quote{\textbf{Research Interests:} To determine and predict some of the conditions for post-translational modifications in protein as a result of environmental stresses and to implement technology for the automation of responsible analysis}
-
 %\quote{\textbf{Research Interests:} To implement better teaching and research by increasing more involvement of students in coursework, research projects and other advanced projects in Bioinformatics, Computer Science and Integrative Informatics}
-
 
 \quote{\textbf{Research Interests:} To apply my academic efforts to produce better mechanisms of data analysis in bioinformatics. To inspire my students to follow their dreams to successful careers in data analysis.}
 
 % To contribute ideas, research and software to help my scientific community in bioinformatics and data analysis to process and learn from the massive amounts of raw data which comes from other avenues of research. 
-
-
-
 
 %\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -91,9 +85,25 @@
 
 
 %\vspace{-.4cm}
-\section{Work Experience}
+\section{Current Appointment}
 %\vspace{-.4cm}
-\cventry{2017 - current}{Assistant Professor}{Allegheny College}{Meadville, PA}{}{Department of Computer Science}
+\cventry{2017 - current}{Assistant Professor, Dept of Computer Information Science, Dept of Informatics}{Allegheny College}{Meadville, PA}{}{Department of Computer Science}
+
+\subsection{Classes Taught}
+\cventry{ }{Data Analytics}{Exploratory steps in analysis, plotting,  statistics, models, text analysis}{CSMPSC301}{}{}
+\cventry{ }{Data bases}{SQL, MongoDB, Neo4J; database design, query, modification,and maintenance}{CMPSC312}{}{}
+\cventry{ }{Bioinformatics}{Genetic sequences, genes structure, protein folding, alignment, analysis}{CMPSC300}{}{}
+\cventry{ }{Operating Systems}{Kernals, memory pages, CPU and software}{CMPSC400}{}{}
+\cventry{ }{Junior Seminar}{Research project proposal preparation for senior comp}{CMPSC580}{}{}
+\cventry{ }{Senior comps}{Senior student advisor for comp project}{CMPSC600 and CMPSC610}{}{}
+\cventry{ }{Academic Discord}{First Year students: Data usage, comprehension and basic analysis}{FS101}{}{}
+\cventry{ }{Theory of Computation CMPSC}{Turing Machines, automata, symbols, languages, programmable machines}{}{}{}
+\cventry{ }{OutReach}{Teaching Data Analytics to high-school students}{}{}{}
+
+
+%\vspace{-.4cm}
+\section{Prior Appointments}
+%\vspace{-.4cm}
 \cventry{2016}{Visiting Assistant Professor}{Allegheny College}{Meadville, PA}{}{Department of Computer Science}
 \cventry{2014 Fall - 2016}{Management of Information Systems - Teaching}{UNO}{Omaha, Nebraska}{}{CIST 2100: Organizations, Applications and Technology}
 \cventry{2009 -- 2016}{Bioinformatics - Research}{Peter Kiewit Inst - UNO}{Omaha, Nebraska}{}{Post-translational modifications, protein interactions as a result of environmental stress, DNA gene prediction/detection using non-alignment, mathematically and statistically based ideas and methods}                
@@ -119,6 +129,12 @@
  % arguments 3 to 6 are optional
 
 %\cventry{1995 -- 1997}{Lab Technician}{University of Nebraska Medical Center }{Omaha, Nebraska}{}{Statistical / computer-based work for study of blood cell receptors}                % arguments 3 to 6 are optional
+
+
+\section{Teaching}
+\vspace{-.4cm}
+%\cventry{month year}{who}{title}{which conference}{organizers}{}
+
 
 
 
@@ -266,6 +282,9 @@
 \cvline{Decemebr 2021}{\textbf{Faculty Lecture Series at Allegheny College}: \emph{Integrating Responsibility Into Computing}}{Info Link: \url{https://www.youtube.com/watch?v=A8QsWP9NGUs}}{}
 
 \cvline{March 2021}{\textbf{MozFest: Mozilla Festival}: \emph{Responsible Computing Curricula -- How do we do it? }}{Info Link: \url{https://schedule.mozillafestival.org/session/877N8H-1}}{}
+
+
+\cvline{March 2017}{\textbf{Teaching Integrated Bioinformatics}: \emph{St Vincent College}}{Convention of PA Bioinformatics Instructors}{}
 
 
 
